; ModuleID = '/home/carl/AnghaBench/sqlcipher/test/extr_tt3_checkpoint.c_checkpoint_starvation_1.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/test/extr_tt3_checkpoint.c_checkpoint_starvation_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i32, i32, i32 }

@SQLITE_CHECKPOINT_PASSIVE = common dso_local global i32 0, align 4
@CHECKPOINT_STARVATION_FRAMELIMIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"WAL failed to grow - %d frames\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @checkpoint_starvation_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @checkpoint_starvation_1(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__, align 4
  %4 = alloca %struct.TYPE_7__, align 4
  store i32 %0, i32* %2, align 4
  %5 = bitcast %struct.TYPE_6__* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %5, i8 0, i64 4, i1 false)
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %7 = load i32, i32* @SQLITE_CHECKPOINT_PASSIVE, align 4
  store i32 %7, i32* %6, align 4
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 1
  store i32 0, i32* %8, align 4
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 2
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @checkpoint_starvation_main(i32 %10, %struct.TYPE_7__* %4)
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @CHECKPOINT_STARVATION_FRAMELIMIT, align 4
  %15 = mul nsw i32 %14, 10
  %16 = icmp slt i32 %13, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %1
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @test_error(%struct.TYPE_6__* %3, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %17, %1
  %22 = call i32 @print_and_free_err(%struct.TYPE_6__* %3)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @checkpoint_starvation_main(i32, %struct.TYPE_7__*) #2

declare dso_local i32 @test_error(%struct.TYPE_6__*, i8*, i32) #2

declare dso_local i32 @print_and_free_err(%struct.TYPE_6__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
